tests/negative/Internal/WrongConstructorArity.juvix
module WrongConstructorArity;

type T :=
  | A : T → T;

f : T → T;
f (A i x) := i;
